'#' alteração das ancoras

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <header>
         <h1>Portfólio</h1>
-        <a href="index.html"><nav>Inicio</nav></a>
-        <a href="sobre mim.html"><nav>Sobre</nav></a>
+        <div class="paginas">
+            <a class="paginas__navegacao" href="index.html"><nav>Inicio</nav></a>
+            <a class="paginas__navegacao" href="sobre mim.html"><nav>Sobre</nav></a>
+            <a class="paginas__navegacao" href="formações.html"><nav>Formações</nav></a>
+        </div>
     </header>
     <main>
         <section class="informacoes">
