--- a/sobre mim.html
+++ b/sobre mim.html
@@ -9,35 +9,37 @@
 </head>
 <body>
     <header>
-        <h1>Portfólio</h1>
-        <a href="index.html"><nav>Inicio</nav></a>
-        <a href="sobre mim.html"><nav>Sobre</nav></a>
+        <h2>Portfólio</h2>
+        <div class="paginas">
+            <a class="paginas__navegacao" href="index.html"><nav>Inicio</nav></a>
+            <a class="paginas__navegacao" href="sobre mim.html"><nav>Sobre</nav></a>
+            <a class="paginas__navegacao" href="formações.html"><nav>Formações</nav></a>
+        </div>
     </header>
     <main>
         <section class="informacoes">    
-            <h2 class="informacoes__titulo">
+            <h1 class="informacoes__titulo">
                 Sobre mim
-            </h2>
+            </h1>
             <p class="informacoes__conteudo">
-                    Ramon Rosa de Souza
+                <strong>Ramon Rosa de Souza</strong><br>
                 Gestor de setor e empresa, desenvolvedor de sistema.<br>
                 27 anos		Rua Maria Camila Bilhar, N°120, Boa Saúde, Novo Hamburgo.<br>
                 (51) 99557-8178<br>
-                Habilidades<br>
+                <strog>Habilidades</strog><br>
                 Calmo<br>
                 Focado<br>
                 Gestor de Pessoas<br>
                 Exigente com operações<br>
                 Experiências<br>
-                Estagio 2011 a 2012 Estofados S.R.F. Ltda.<br>
+                <strong>Estagio 2011 a 2012 Estofados S.R.F. Ltda.</strong><br>
                 Embalador de estofados<br>
                 Organização de estoque<br>
                 Carregava caminhão<br>
-                2012 a 2013
-                Trabalhava com familiar <br>
+                <strong> 2012 a 2013 Trabalhava com familiar</strong> <br>
                 Vendedor<br>
                 Mecânico de Bicicletas<br>
-                2013 a 2023 Unidasul dist. Alimentícia S.A. Filial 54<br>
+                <strong> 2013 a 2023 Unidasul dist. Alimentícia S.A. Filial 54</strong><br>
                 Repositor de mercadorias<br>
                 Cartazista e Circularista<br>
                 Operador de empilhadeira<br>
