--- a/sobre mim.html
+++ b/sobre mim.html
@@ -26,7 +26,7 @@
                 Gestor de setor e empresa, desenvolvedor de sistema.<br>
                 27 anos		Rua Maria Camila Bilhar, N°120, Boa Saúde, Novo Hamburgo.<br>
                 (51) 99557-8178<br>
-                <strog>Habilidades</strog><br>
+                <strong>Habilidades</strong><br>
                 Calmo<br>
                 Focado<br>
                 Gestor de Pessoas<br>
@@ -51,8 +51,10 @@
     <footer>
         <h2>Desenvolvido por Ramon_zitu</h2>
         <div class="links">
-            <a class="links__link" href="https://www.instagram.com/ramon_zitu/">Instagram</a>
-            <a class="links__link" href="https://www.linkedin.com/in/ramon-rosa-341038248/">Linkedin</a>
+            <a class="links__link" href="https://www.instagram.com/ramon_zitu/"><img src="imagens/instagram.jpg"alt="Instagram-ramon-zitu"></a>
+            <a class="links__link" href="https://www.linkedin.com/in/ramon-rosa-341038248/"><img src="imagens/linkedin.jpg" alt= "Linkedin-ramon-rosa"></a>
+            <a class="links__link" href="https://github.com/Ramon-zitu"><img src="imagens/githube.jpg" alt="githube-Ramon-zitu"></a>
+            <a class="links__link" href="https://www.facebook.com/ramon.rosa.16"><img src="imagens/facebook.jpg" alt="facebook-ramon-rosa"></a>
         </div>
     </footer>
 </body>
