--- a/formações.html
+++ b/formações.html
@@ -30,10 +30,10 @@
     <footer>
         <h2>Desenvolvido por Ramon_zitu</h2>
         <div class="links">
-            <a class="links__link" href="https://www.instagram.com/ramon_zitu/"><img src="imagens/instagram.jpg"alt="Instagram-ramon-zitu"></a>
-            <a class="links__link" href="https://www.linkedin.com/in/ramon-rosa-341038248/"><img src="imagens/linkedin.jpg" alt= "Linkedin-ramon-rosa"></a>
-            <a class="links__link" href="https://github.com/Ramon-zitu"><img src="imagens/githube.jpg" alt="githube-Ramon-zitu"></a>
-            <a class="links__link" href="https://www.facebook.com/ramon.rosa.16"><img src="imagens/facebook.jpg" alt="facebook-ramon-rosa"></a>
+            <a class="links__link" href="https://www.instagram.com/ramon_zitu/"><img class="img__rede__social" src="imagens/instagram.jpg"alt="Instagram-ramon-zitu"></a>
+            <a class="links__link" href="https://www.linkedin.com/in/ramon-rosa-341038248/"><img class="img__rede__social" src="imagens/linkedin.jpg" alt= "Linkedin-ramon-rosa"></a>
+            <a class="links__link" href="https://github.com/Ramon-zitu"><img class="img__rede__social" src="imagens/githube.jpg" alt="githube-Ramon-zitu"></a>
+            <a class="links__link" href="https://www.facebook.com/ramon.rosa.16"><img class="img__rede__social" src="imagens/facebook.jpg" alt="facebook-ramon-rosa"></a>
         </div>
     </footer>
 </body>
