ajuste do texto

--- a/formações.html
+++ b/formações.html
@@ -19,13 +19,10 @@
     <main>
         <section class="informacoes">
             <H2 class="informacoes__titulo">
-                Formações academicas.
+                Formações acadêmicas.
             </H2>
-            <p class="informacoes__conteudo">
-                
-            </p>    
+               
         </section>
-        <img class="imagem" src="imagens/ramon.jpg" alt="foto do ramon">
     </main>
     <footer>
         <h2>Desenvolvido por Ramon_zitu</h2>
