--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 Acabei resolvendo migrar para essa área, além de esta crescendo cada vez mais, eu sempre gostei do ramo da informática, tenho cursos de designer gráfico, manutenção de computadores.
             </p>    
         </section>
-        <img class="imagem" src="imagens/ramon.jpg" alt="foto do ramon">
+        <img class="imagem" src="imagens/ramon.jpg" alt="foto do Ramon">
     </main>
     <footer>
         <h2>Desenvolvido por Ramon_zitu</h2>
